[package]
name = "myproj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sp-io = "6.0.0"
sp-core = "6.0.0"
getrandom = { version = "0.2", features = ["js"] }


